--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: graphql_flutter_bloc
 description: A new Flutter package.
-version: 0.0.1-beta.2
+version: 0.0.1-beta.3
 homepage: https://artflutter.dev
 
 environment:
@@ -19,6 +19,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: 1.10.1
+  freezed: ^0.11.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
