--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
 name: example
-description: A new Flutter application.
+description: Demo on how to use `graphql_flutter_bloc`
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
