--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: graphql_flutter_bloc
-description: A new Flutter package.
-version: 0.0.3-beta.2
-homepage: https://artflutter.dev
+description: BLOC wrapper over `graphql_flutter` streams with improved state handling.
+version: 0.0.3-beta.3
+homepage: https://github.com/artflutter/graphql_flutter_bloc
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
