--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: graphql_flutter_bloc
 description: BLOC wrapper over `graphql_flutter` streams with improved state handling.
-version: 0.0.5-beta.1
+version: 0.3.0-beta.1
 homepage: https://github.com/artflutter/graphql_flutter_bloc
 
 environment:
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation: ^0.11.0+1
+  freezed_annotation: ^0.12.0
   flutter_bloc: ^6.0.5
   meta: ^1.1.8
   graphql: ^3.1.0-beta.7
@@ -20,7 +20,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: 1.10.1
-  freezed: ^0.11.6
+  freezed: ^0.12.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
