--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  graphql_flutter: 3.1.0-beta.7
+  graphql: 3.1.0-beta.7
   path_provider: ^1.6.14
   flutter_bloc: ^6.0.5
   equatable: ^1.1.1
