--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,13 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^1.6.14
-  flutter_bloc: ^6.0.5
-  equatable: ^1.1.1
-  json_serializable: ^3.4.1
+  path_provider: ^1.6.22
+  flutter_bloc: ^6.0.6
+#  equatable: ^1.1.1
+  json_serializable: ^3.5.0
   gql: 0.12.3
-  hive: ^1.4.4
-  graphql: ^4.0.0-alpha.11
+  hive: ^1.4.4+1
+  graphql: ^4.0.0-beta.3
   graphql_flutter_bloc:
     path: ../
 
@@ -37,14 +37,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.10.1
-  artemis: ^6.12.3-beta.1
+  artemis: ^6.15.1-beta.1
 
 dependency_overrides:
   gql_http_link: ^0.3.1
   gql_link: ^0.3.1-alpha
   gql: ^0.12.4-alpha
   rxdart: ^0.24.1
-  meta: ^1.2.2
+  meta: ^1.2.3
+  analyzer: ^0.39.15
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
