--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,21 @@ dependencies:
   flutter:
     sdk: flutter
   freezed_annotation: ^0.12.0
-  flutter_bloc: ^6.0.5
+  flutter_bloc: ^6.0.6
   meta: ^1.1.8
-  graphql: ^4.0.0-alpha.11
+  graphql: ^4.0.0-beta.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.15.4
+  bloc_test: ^7.0.6
+  mockito: ^4.1.3
   build_runner: 1.10.1
-  freezed: ^0.12.1
+  freezed: ^0.12.2
+
+dependency_overrides:
+  analyzer: ^0.39.15
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
