--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,30 +1,32 @@
 name: graphql_flutter_bloc
 description: BLOC wrapper over `graphql_flutter` streams with improved state handling.
-version: 0.6.0
+version: 0.7.0-nullsafety.0
 homepage: https://github.com/artflutter/graphql_flutter_bloc
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation: ^0.12.0
-  flutter_bloc: ^6.1.1
-  meta: ^1.2.4
-  http: ^0.12.2
-  gql: ^0.12.4
-  graphql: ^4.0.0
+  freezed_annotation: ^0.13.0-nullsafety.0
+  flutter_bloc: ^7.0.0-nullsafety.2
+  http: ^0.13.0
+  gql: ^0.13.0-nullsafety.1
+  graphql: ^5.0.0-nullsafety.1+readmefix
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: ^1.15.7
-  bloc_test: ^7.1.0
-  mockito: ^4.1.4
-  build_runner: 1.11.1
-  freezed: ^0.12.7
+  test: ^1.16.5
+  bloc_test: ^8.0.0-nullsafety.0
+  mockito: ^5.0.0
+  build_runner: 1.11.5
+  freezed: ^0.14.0-nullsafety.0
+
+dependency_overrides:
+  web_socket_channel: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
