--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,29 +21,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^2.0.1
-  flutter_bloc: ^7.0.0
-  json_serializable: ^4.1.0
-  gql: ^0.13.0-nullsafety.2
-  http: ^0.13.1
-  hive: ^2.0.2
-  graphql: ^5.0.0-nullsafety.2
+  path_provider: ^2.0.2
+  flutter_bloc: ^7.0.1
+  json_serializable: ^4.1.3
+  gql: ^0.13.0
+  http: ^0.13.3
+  hive: ^2.0.4
+  graphql: ^5.0.0
   graphql_flutter_bloc:
     path: ../
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.12.2
-#  artemis: ^7.0.0-beta.1
-  artemis:
-    git:
-      url: https://github.com/comigor/artemis.git
-      ref: d447415fa16b3e8265152de47d6aba192ff8a1d1
+  build_runner: ^2.0.5
+  artemis: ^7.1.0-beta.0
 
 #dependency_overrides:
 #  gql_http_link: ^0.4.0-nullsafety.1
