--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,29 +1,32 @@
 name: graphql_flutter_bloc
 description: BLOC wrapper over `graphql_flutter` streams with improved state handling.
-version: 0.7.0-nullsafety.2
+version: 0.7.0
 homepage: https://github.com/artflutter/graphql_flutter_bloc
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.17.0"
+  flutter: ">=2.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation: ^0.14.1
-  flutter_bloc: ^7.0.0
-  http: ^0.13.1
-  gql: ^0.13.0-nullsafety.1
-  graphql: ^5.0.0-nullsafety.2
+  freezed_annotation: ^0.14.2
+  flutter_bloc: ^7.0.1
+  http: ^0.13.3
+  gql: ^0.13.0
+  graphql: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: ^1.16.5
-  bloc_test: ^8.0.0
-  mockito: ^5.0.3
-  build_runner: 1.12.2
-  freezed: ^0.14.1+2
+  test: ^1.17.9
+  bloc_test: ^8.0.2
+  mockito: ^5.0.10
+  build_runner: ^2.0.5
+  freezed: ^0.14.2
+
+dependency_overrides:
+  test_api: 0.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
