--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,11 +21,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^2.0.2
+  path_provider: ^2.0.8
   flutter_bloc: ^7.0.1
-  json_serializable: ^4.1.3
+  json_serializable: ^6.1.1
   gql: ^0.13.0
-  http: ^0.13.3
+  http: ^0.13.4
   hive: ^2.0.4
   graphql: ^5.0.0
   graphql_flutter_bloc:
@@ -33,13 +33,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.3
+  cupertino_icons: ^1.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.0.5
-  artemis: ^7.1.0-beta.0
+  build_runner: ^2.1.5
+  artemis: ^7.2.6-beta
+  flutter_lints: ^1.0.4
 
 #dependency_overrides:
 #  gql_http_link: ^0.4.0-nullsafety.1
