--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,13 +21,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^2.0.8
-  flutter_bloc: ^8.0.0
-  json_serializable: ^6.1.1
+  path_provider: ^2.0.9
+  flutter_bloc: ^8.0.1
+  json_serializable: ^6.1.5
   gql: ^0.13.0
   http: ^0.13.4
-  hive: ^2.0.4
-  graphql: ^5.0.0
+  hive: ^2.0.6
+  graphql: ^5.0.1
   graphql_flutter_bloc:
     path: ../
 
@@ -38,13 +38,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.1.5
-  artemis: ^7.2.6-beta
+  build_runner: ^2.1.7
+  artemis: ^7.3.2-beta
   flutter_lints: ^1.0.4
 
-#dependency_overrides:
+dependency_overrides:
 #  gql_http_link: ^0.4.0-nullsafety.1
-#  gql_link: ^0.4.0-nullsafety.3
+  gql_link: ^0.4.3-alpha
+  gql_http_link: ^0.4.2-alpha
+  gql_exec: ^0.3.2-alpha
 
 #  rxdart: ^0.24.1
 #  meta: 1.2.2
