--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,11 +23,11 @@ dependencies:
     sdk: flutter
   path_provider: ^2.0.9
   flutter_bloc: ^8.0.1
-  json_serializable: ^6.1.5
-  gql: ^0.13.0
+  json_serializable: ^6.1.6
+  gql: ^0.13.1
   http: ^0.13.4
-  hive: ^2.0.6
-  graphql: ^5.0.0
+  hive: ^2.1.0
+  graphql: ^5.1.1
   graphql_flutter_bloc:
     path: ../
 
@@ -39,7 +39,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.1.7
-  artemis: ^7.3.2-beta
+  artemis: ^7.7.0-beta
   flutter_lints: ^1.0.4
 
 dependency_overrides:
@@ -47,6 +47,8 @@ dependency_overrides:
   gql_link: ^0.4.3-alpha
   gql_http_link: ^0.4.2-alpha
   gql_exec: ^0.3.2-alpha
+  path: ^1.8.1
+  collection: 1.16.0
 
 #  rxdart: ^0.24.1
 #  meta: 1.2.2
