--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,33 +1,33 @@
 name: graphql_flutter_bloc
 description: BLOC wrapper over `graphql_flutter` streams with improved state handling.
-version: 0.16.0
+version: 0.17.0
 homepage: https://github.com/artflutter/graphql_flutter_bloc
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=2.0.0"
+  sdk: '>=2.17.0 <3.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation: ^2.0.3
-  flutter_bloc: ^8.0.1
-  http: ^0.13.4
-  gql: ^0.13.1
+  freezed_annotation: ^2.2.0
+  flutter_bloc: ^8.1.1
+  http: ^0.13.5
+  gql: ^0.14.0
   graphql: ^5.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: ^1.21.1
-  bloc_test: ^9.0.3
-  mockito: ^5.2.0
-  build_runner: ^2.1.11
-  freezed: ^2.0.3+1
-  flutter_lints: ^1.0.4
+  test: ^1.22.0
+  bloc_test: ^9.1.0
+  mockito: ^5.3.2
+  build_runner: ^2.3.2
+  freezed: ^2.2.1
+  flutter_lints: ^2.0.1
 
 #dependency_overrides:
-#  test_api: ^0.4.9
+#  test_api: ^0.4.16
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
