--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: graphql_flutter_bloc
 description: BLOC wrapper over `graphql_flutter` streams with improved state handling.
-version: 0.17.0
+version: 0.17.1
 homepage: https://github.com/artflutter/graphql_flutter_bloc
 
 environment:
@@ -11,23 +11,23 @@ dependencies:
   flutter:
     sdk: flutter
   freezed_annotation: ^2.2.0
-  flutter_bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
   http: ^0.13.5
   gql: ^0.14.0
-  graphql: ^5.1.1
+  graphql: ^5.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: ^1.22.0
-  bloc_test: ^9.1.0
+  test_api: ^0.4.18
+  bloc_test: ^9.1.1
   mockito: ^5.3.2
-  build_runner: ^2.3.2
-  freezed: ^2.2.1
+  build_runner: ^2.3.3
+  freezed: ^2.3.2
   flutter_lints: ^2.0.1
 
 #dependency_overrides:
-#  test_api: ^0.4.16
+#  test_api: ^0.4.18
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
