--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,18 @@
 name: graphql_flutter_bloc
 description: BLOC wrapper over `graphql_flutter` streams with improved state handling.
-version: 0.17.2
+version: 1.0.0
 homepage: https://github.com/artflutter/graphql_flutter_bloc
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
-  flutter: ">=3.0.0"
+  sdk: '>=2.17.0 <4.0.0'
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
   freezed_annotation: ^2.2.0
-  flutter_bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  bloc_concurrency: ^0.2.2
   http: ^0.13.5
   gql: ^0.14.0
   graphql: ^5.1.3
@@ -19,11 +20,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test_api: ^0.4.18
-  bloc_test: ^9.1.1
-  mockito: ^5.3.2
-  build_runner: ^2.3.3
-  freezed: ^2.3.2
+  test_api: ^0.5.1
+  bloc_test: ^9.1.3
+  mockito: ^5.4.2
+  build_runner: ^2.4.5
+  freezed: ^2.3.5
   flutter_lints: ^2.0.1
 
 #dependency_overrides:
